Handle multipe scrollbar & overlay | fix tippy warning

--- a/tiktok-ui/src/components/Layouts/components/Header/Header.module.scss
+++ b/tiktok-ui/src/components/Layouts/components/Header/Header.module.scss
@@ -4,10 +4,15 @@
     --search-top-spacer: 9px;
     --search-button-width: 52px;
 
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+    background-color: var(--white);
     display: flex;
+    z-index: 10;
     justify-content: center;
 }
 
